src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clcommon__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this record can be archived. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clcommon__Direct_Exposure_Relationship__c</fullName>
        <description>Direct exposure of account considering all relationships</description>
        <inlineHelpText>Direct exposure of account considering all relationships</inlineHelpText>
        <label>Direct Exposure(Relationship)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clcommon__Direct_Exposure__c</fullName>
        <description>Total amount of credit extended to the borrower</description>
        <inlineHelpText>Total amount of credit extended to the borrower</inlineHelpText>
        <label>Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clcommon__Direct_Proposed_Exposure__c</fullName>
        <description>Total amount of credit extended to the borrower, plus any loan opportunities currently being underwritten</description>
        <inlineHelpText>Total amount of credit extended to the borrower, plus any loan opportunities currently being underwritten</inlineHelpText>
        <label>Direct Proposed Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clcommon__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>clcommon__Indirect_Exposure_Relationship__c</fullName>
        <description>Indirect exposure of account considering all relationships</description>
        <inlineHelpText>Indirect exposure of account considering all relationships</inlineHelpText>
        <label>Indirect Exposure(Relationship)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clcommon__Indirect_Exposure__c</fullName>
        <description>Total amount of credit cosigned or guaranteed by the customer</description>
        <inlineHelpText>Total amount of credit cosigned or guaranteed by the customer</inlineHelpText>
        <label>Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clcommon__Indirect_Proposed_Exposure__c</fullName>
        <description>Total amount of credit cosigned or guaranteed by the customer, plus any loan opportunities currently being cosigned or guaranteed by the customer</description>
        <inlineHelpText>Total amount of credit cosigned or guaranteed by the customer, plus any loan opportunities currently being cosigned or guaranteed by the customer</inlineHelpText>
        <label>Indirect Proposed Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>clcommon__Last_Modified_Date_Exposure__c</fullName>
        <description>Last date on which credit exposure was calculated</description>
        <inlineHelpText>Last date on which credit exposure was calculated</inlineHelpText>
        <label>Last Modified Date(Exposure)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>clcommon__Legal_Entity_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity Type</label>
        <referenceTo>clcommon__Legal_Entity__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>clcommon__Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this is a master object record containing one or more child object records. Master object records may be archived but are not deleted by the system. This is automatically updated by the system. Do not update it manually.</inlineHelpText>
        <label>Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clcommon__Summary_Record_Id__c</fullName>
        <inlineHelpText>The ID of the summary transaction record within which this record is summarized. This is automatically generated by the system. Do no update it manually.</inlineHelpText>
        <label>Summary Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clcommon__Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that the record is a summary transaction record for data archival purpose. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnotify__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cnotify__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>genesis__Business_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Information</label>
        <referenceTo>genesis__Business_Information__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>genesis__Total_Risk_Score__c</fullName>
        <label>Total Risk Score</label>
        <summarizedField>genesis__Account_Scorecard_Result__c.genesis__Weighted_Score__c</summarizedField>
        <summaryForeignKey>genesis__Account_Scorecard_Result__c.genesis__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>genesis__Vendor_Type__c</fullName>
        <label>Vendor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appraiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Titled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ints__Email__c</fullName>
        <description>email for yodlee fastlink2.0</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ints__SSN__c</fullName>
        <label>SSN</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Yodlee_Password__c</fullName>
        <description>Password for Yodlee Username.</description>
        <label>Yodlee_Password</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Yodlee_Username__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Username registered with Yodlee. This Username can have multiple bank accounts linked with Yodlee.</description>
        <label>Yodlee Username</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>loan__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Borrower__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Borrower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick, if the Account is a Broker.</inlineHelpText>
        <label>Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Collect_Service_Fees_on__c</fullName>
        <description>Service Fee Strategy on account</description>
        <inlineHelpText>Select the components of investor payments on which service fees is to be charged. Default value is taken from &quot;Fractionalization Parameters&quot; custom setting. If &quot;No Fees&quot; is selected, no service fee will be calculated on investor payments.</inlineHelpText>
        <label>Collect Service Fees on</label>
        <picklist>
            <picklistValues>
                <fullName>Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal Remaining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Fees</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>loan__CustomerPriority__c</fullName>
        <label>Customer Priority (DEPRECATED)</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Deployed_Funds__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Stores the total buying price of all the invested loans.</description>
        <inlineHelpText>Stores the total buying price of all the invested loans.</inlineHelpText>
        <label>Total Buying Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group (DEPRECATED)</label>
        <referenceTo>loan__Group__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Donated_Till_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Donated Till Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Got_Back_Till_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Got Back Till Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Reinvested_Till_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Interest Reinvested Till Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Investor_Tax_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investor Tax Configuration</label>
        <referenceTo>loan__Investor_Tax_Configuration__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Investor_Type__c</fullName>
        <label>Investor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Investor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Reinvest_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reinvest Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Reinvest_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reinvest Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date (DEPRECATED)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__SLASerialNumber__c</fullName>
        <label>SLA Serial Number (DEPRECATED)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__SLA__c</fullName>
        <label>SLA (DEPRECATED)</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__SOCIAL_SECURITY_NUMBER__c</fullName>
        <label>SOCIAL_SECURITY_NUMBER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Service_Rate_On_Investment__c</fullName>
        <defaultValue>$Setup.loan__Fractionalization_Parameters__c.loan__Default_Service_Rate__c</defaultValue>
        <inlineHelpText>Default service rate on investor&apos;s investments</inlineHelpText>
        <label>Service Rate On Investment</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Invested_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total amount invested by the investor on all the loans.</description>
        <inlineHelpText>Total amount invested by the investor on all the loans.</inlineHelpText>
        <label>Total Invested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Pay_Off_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field gives the total pay-off amount as of today.</description>
        <inlineHelpText>This is the total pay-off amount of all loans as of today.</inlineHelpText>
        <label>Total Pay Off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>loan__Total_Principal_Remaining__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total principal remaining in all the investment order of the investor.</description>
        <inlineHelpText>Total principal remaining in all the investment order of the investor.</inlineHelpText>
        <label>Total Invested Principal Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Returns__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Return on Investment gained by Investor</description>
        <label>Total Returns</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Uncleared_Deposits__c</fullName>
        <label>Uncleared Deposits</label>
        <summarizedField>loan__Investor_Fund_Transaction__c.loan__Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Transaction_Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Cleared__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Rejected__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Investor_Fund_Transaction__c.loan__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Uncleared_Withdrawals__c</fullName>
        <label>Uncleared Withdrawals</label>
        <summarizedField>loan__Investor_Fund_Transaction__c.loan__Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Transaction_Amount__c</field>
            <operation>lessOrEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Cleared__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Rejected__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Reversed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Investor_Fund_Transaction__c.loan__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Undeployed_Funds__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total amount which is available to invest in loans.</description>
        <label>Available Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity (DEPRECATED)</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <listViews>
        <fullName>genesis__AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>genesis__MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>genesis__NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>genesis__NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>genesis__PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Collect_Service_Fees_On_Check</fullName>
        <active>true</active>
        <description>We cannot select No Fees along with other values.</description>
        <errorConditionFormula>AND(INCLUDES(loan__Collect_Service_Fees_on__c, &apos;No Fees&apos;), OR(INCLUDES(loan__Collect_Service_Fees_on__c, &apos;Principal&apos;), INCLUDES(loan__Collect_Service_Fees_on__c, &apos;Interest&apos;), INCLUDES(loan__Collect_Service_Fees_on__c, &apos;Fees&apos;)))</errorConditionFormula>
        <errorMessage>In &quot;Collect Service Fees On&quot;, &quot;No Fees&quot; cannot be selected with other values.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Service_Fee_Principal_Check</fullName>
        <active>true</active>
        <description>User cannot select both Principal paid and principal remaining to calculate the service fee.</description>
        <errorConditionFormula>AND( INCLUDES(loan__Collect_Service_Fees_on__c, &apos;Principal&apos;) , INCLUDES(loan__Collect_Service_Fees_on__c, &apos;Principal Remaining&apos;) )</errorConditionFormula>
        <errorMessage>You can select either Principal or Principal Remaining but not both of them.</errorMessage>
    </validationRules>
</CustomObject>